--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,11 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
     
-    <title></title>
+    <title>Trivia Trainer</title>
   </head>
-  <body style="background-color: #e6afba;">
+  <body style="background-color: #000000;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
